Add error handling for all get mappings